--- a/public/messages.html
+++ b/public/messages.html
@@ -60,14 +60,13 @@
         import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js';
 
         const firebaseConfig = {
-            apiKey: "AIzaSyA9Rlo0O2BTIZZCtQTGAyhH1O9FMgBh50g",
-            authDomain: "driveshare-d6322.firebaseapp.com",
-            projectId: "driveshare-d6322",
-            storageBucket: "driveshare-d6322.appspot.com",
-            messagingSenderId: "383014765071",
-            appId: "1:383014765071:web:fa2c205539ed25fc43d97a",
-            measurementId: "G-F45ZS0WY4Y"
-        };
+    apiKey: process.env.FIREBASE_API_KEY,
+    authDomain: process.env.FIREBASE_AUTH_DOMAIN,
+    projectId: process.env.FIREBASE_PROJECT_ID,
+    storageBucket: process.env.FIREBASE_STORAGE_BUCKET,
+    messagingSenderId: process.env.FIREBASE_MESSAGING_SENDER_ID,
+    appId: process.env.FIREBASE_APP_ID
+};
 
         // Initialize Firebase only if no apps are already initialized
         let app;
